--- a/css/master.css
+++ b/css/master.css
@@ -1,5 +1,5 @@
 body{
-    background: url(../Images/mountain.jpg) no-repeat center center fixed; 
+    background: linear-gradient(rgba(98, 105, 116, 0.35), rgba(98, 105, 116, 0.35)), url(../Images/mountain.jpg) no-repeat center center fixed; 
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -8,7 +8,12 @@ body{
 
 .mainMessage{
     text-align: center;
-    display: block;
+}
+
+.mainPage{
     padding-top: 20%;
-    padding-bottom: 20%;
+}
+
+.nodeco{
+    text-decoration: none;
 }
