Did a transitional page, home.html is now the main page

--- a/css/master.css
+++ b/css/master.css
@@ -20,6 +20,8 @@ body{
 
 
 .profile{
+    margin-left: auto;
+    margin-right: auto;
     width: 100%;
     max-width: 200px;
     height: auto;
@@ -28,6 +30,9 @@ body{
 }
 
 .aboutCard{
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
     width: 50%;
 }
 
@@ -41,6 +46,8 @@ body{
     }
 
     .aboutCard{
+        margin-left: auto;
+        margin-right: auto;
         width: 75%;
     }
 }
