--- a/css/master.css
+++ b/css/master.css
@@ -36,6 +36,15 @@ body{
     width: 50%;
 }
 
+.justifyText{
+    text-align: justify;
+}
+
+.left{
+    text-align: left;
+}
+
+
 @media only screen and (max-width: 600px) {
     .profile{
         width: 100%;
@@ -48,10 +57,6 @@ body{
     .aboutCard{
         margin-left: auto;
         margin-right: auto;
-        width: 75%;
+        width: 90%;
     }
-}
-
-.justifyText{
-    text-align: justify;
 }
