--- a/css/aboutme.css
+++ b/css/aboutme.css
@@ -1,13 +1,28 @@
+.welcome{
+    background: linear-gradient(rgba(98, 105, 116, 0.10), rgba(98, 105, 116, 0.10)), url(../Images/clouds.jpg) no-repeat center center fixed; 
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+
+.welcome h1{
+    margin-top: 15%;
+    margin-bottom: 15%;
+    font-family: 'Jua', sans-serif;
+    font-weight: bold;
+    color: white;
+    text-align: center;
+}
+
 .aboutMe{
-    background: aquamarine;
+    background: rgba(0, 0, 0, 0.9);
+    color: white;
 }
 
 .aboutMe h4{
     text-align: center;
-}
-
-.aboutContent{
-    
+    color: rgb(0, 162, 255);
 }
 
 .aboutCard{
@@ -17,6 +32,10 @@
     width: 50%;
 }
 
+#btnCenter{
+    text-align: center;
+}
+
 .contentStandard{
     padding-left: 20%;
     padding-right: 20%;
@@ -24,13 +43,43 @@
     padding-bottom: 1%;
 }
 
+.contentAlign{
+    padding-top: 2.5%;
+    padding-bottom: 2.5%;
+}
+
 .skillset{
+    padding-left: 20%;
+    padding-right: 20%;
+    padding-bottom: 1%;
     background: red;
     color: white;
 }
 
+.skillset h5{
+    text-align: center;
+}
+
+.skillTitle{
+    padding-top: 1%;
+    padding-left: 20%;
+    padding-right: 20%;
+    background: red;
+    color: white;
+}
+
+.skillTitle h4{
+    text-align: center;
+    font-weight: bold;
+}
+
 .moreAboutMe{
     background: gold;
+}
+
+.moreAboutMe h4{
+    text-align: center;
+    font-weight: bold;
 }
 
 .justifyText{
@@ -52,12 +101,22 @@
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 100%;
-    max-width: 100px;
-    height: auto;
+    width: auto;
+    max-width: 200px;
+    height: 100px;
 }
 
 @media only screen and (max-width: 600px) {
+    .welcome h1{
+        margin-top: 25%;
+        margin-bottom: 25%;
+        font-family: 'Jua', sans-serif;
+        font-weight: bold;
+        font-size: x-large;
+        color: white;
+        text-align: center;
+    }
+
     .contentStandard{
         padding-left: 5%;
         padding-right: 5%;
@@ -77,5 +136,18 @@
         margin-left: auto;
         margin-right: auto;
         width: 90%;
+    }
+
+    .contentAlign{
+        padding-top: 5%;
+        padding-bottom: 5%;
+    }
+
+    .webDev{
+        border-bottom: 1px solid black;
+    }
+
+    .mobileDev{
+        border-bottom: 1px solid black;
     }
 }
