--- a/css/aboutme.css
+++ b/css/aboutme.css
@@ -1,5 +1,5 @@
 .welcome{
-    background: linear-gradient(rgba(98, 105, 116, 0.10), rgba(98, 105, 116, 0.10)), url(../Images/clouds.jpg) no-repeat center center fixed; 
+    background: linear-gradient(rgba(98, 105, 116, 0.10), rgba(98, 105, 116, 0.10)), url(../Images/clouds.JPG) no-repeat center center fixed; 
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
