--- a/css/aboutme.css
+++ b/css/aboutme.css
@@ -1,4 +1,4 @@
-.welcome{
+body{
     background: linear-gradient(rgba(98, 105, 116, 0.10), rgba(98, 105, 116, 0.10)), url(../Images/cloudair.jpg) no-repeat center center fixed; 
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -16,7 +16,7 @@
 }
 
 .aboutMe{
-    background: rgba(0, 0, 0, 0.9);
+    background: rgba(0, 0, 0, 0.88);
     color: white;
 }
 
@@ -52,7 +52,7 @@
     padding-left: 20%;
     padding-right: 20%;
     padding-bottom: 1%;
-    background: red;
+    background: rgb(255, 0, 0, 0.88);
     color: white;
 }
 
@@ -64,7 +64,7 @@
     padding-top: 1%;
     padding-left: 20%;
     padding-right: 20%;
-    background: red;
+    background:rgb(255, 0, 0, 0.88);
     color: white;
 }
 
@@ -74,7 +74,7 @@
 }
 
 .moreAboutMe{
-    background: gold;
+    background: rgba(255, 208, 0, 0.88);
 }
 
 .moreAboutMe h4{
