--- a/css/aboutme.css
+++ b/css/aboutme.css
@@ -52,7 +52,7 @@ body{
     padding-left: 20%;
     padding-right: 20%;
     padding-bottom: 1%;
-    background: rgb(255, 0, 0, 0.88);
+    background: rgba(255, 0, 0, 0.88);
     color: white;
 }
 
@@ -64,7 +64,7 @@ body{
     padding-top: 1%;
     padding-left: 20%;
     padding-right: 20%;
-    background:rgb(255, 0, 0, 0.88);
+    background:rgba(255, 0, 0, 0.88);
     color: white;
 }
 
