--- a/css/aboutme.css
+++ b/css/aboutme.css
@@ -1,5 +1,5 @@
 body{
-    background: linear-gradient(rgba(98, 105, 116, 0.10), rgba(98, 105, 116, 0.10)), url(../Images/cloudair.jpg) no-repeat center center fixed; 
+    background: linear-gradient(rgba(98, 105, 116, 0.10), rgba(98, 105, 116, 0.10)), url(../Images/Backgrounds/mountain.jpg) no-repeat center center fixed; 
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -11,7 +11,8 @@ body{
     margin-bottom: 15%;
     font-family: 'Jua', sans-serif;
     font-weight: bold;
-    color: white;
+    font-size: 4em;
+    color: rgb(255, 255, 255);
     text-align: center;
 }
 
