--- a/css/master.css
+++ b/css/master.css
@@ -1,5 +1,5 @@
 body{
-    background: linear-gradient(rgba(98, 105, 116, 0.30), rgba(98, 105, 116, 0.30)), url(../Images/mountain.jpg) no-repeat center center fixed; 
+    background: linear-gradient(rgba(98, 105, 116, 0.30), rgba(98, 105, 116, 0.30)), url(../Images/Backgrounds/mountain.jpg) no-repeat center center fixed; 
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
