--- a/css/foldingcube.css
+++ b/css/foldingcube.css
@@ -1,5 +1,5 @@
 body{
-    background: linear-gradient(rgba(98, 105, 116, 0.50), rgba(98, 105, 116, 0.50)), url(../Images/triangles.jpg) no-repeat center center fixed; 
+    background: linear-gradient(rgba(98, 105, 116, 0.50), rgba(98, 105, 116, 0.50)), url(../Images/Backgrounds/triangles.jpg) no-repeat center center fixed; 
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
