Working on project grid

--- a/css/aboutme.css
+++ b/css/aboutme.css
@@ -113,7 +113,7 @@ body{
         margin-bottom: 25%;
         font-family: 'Jua', sans-serif;
         font-weight: bold;
-        font-size: x-large;
+        font-size: xx-large;
         color: white;
         text-align: center;
     }
