--- a/css/contact.css
+++ b/css/contact.css
@@ -16,6 +16,7 @@ body{
 .contactform{
     background: rgba(0, 0, 0, 0.88);
     color: white;
+    padding-bottom: 20px;
 }
 
 .contactform h3{
@@ -38,6 +39,22 @@ body{
     padding-left: 20%;
     padding-right: 20%;
 }
+@media only screen and (max-width: 800px) {
+    .contactform h3{
+        font-size: x-large;
+    }
+
+    .contentStandard{
+        padding-left: 5%;
+        padding-right: 5%;
+        padding-top: 2%;
+        padding-bottom: 2%;
+    }
+    .contactform{
+        padding-bottom: 280px;
+    }
+}
+
 
 @media only screen and (max-width: 600px) {
     .contactform h3{
@@ -49,5 +66,8 @@ body{
         padding-right: 5%;
         padding-top: 2%;
         padding-bottom: 2%;
+    }
+    .contactform{
+        padding-bottom: 80px;
     }
 }
