--- a/css/master.css
+++ b/css/master.css
@@ -18,6 +18,7 @@ body{
     text-decoration: none;
 }
 
+.navbar { font-family: 'Fira Sans', sans-serif !important; }
 
 .profile{
     margin-left: auto;
