--- a/css/styles.css
+++ b/css/styles.css
@@ -110,6 +110,8 @@ li.nav-item.active a.nav-link span{
     background: #00A1A7;
     position: absolute;
     animation: fill-bar 2s ease-in-out;
+    -webkit-animation: fill-bar 2s ease-in-out;
+    -moz-animation: fill-bar 2s ease-in-out;
 }
 
 .flex{
@@ -176,12 +178,13 @@ div.project-item{
 
 .project-logo-holder{
     display: block;
-    /* padding-top: 50px; */
     margin-bottom: 20px;
     padding: 10px;
     position: relative;
     top: 40px;
     transition: all 0.6s ease;
+    -webkit-transition: all 0.6s ease;
+    -moz-transition: all 0.6s ease;
 }
 
 div.project-item:hover .project-logo-holder {
@@ -205,6 +208,8 @@ div.project-item:hover .project-logo-holder {
     text-align: center;
     text-transform: uppercase;
     transition: all 0.6s ease;
+    -webkit-transition: all 0.6s ease;
+    -moz-transition: all 0.6s ease;
 }
 
 div.project-item:hover .project-name {
@@ -223,6 +228,8 @@ div.project-item:hover .project-name {
     text-align: center;
     transform: scale(0);
     transition: all 600ms cubic-bezier(0.68, -0.55, 0.265, 1.55);
+    -webkit-transition: all 600ms cubic-bezier(0.68, -0.55, 0.265, 1.55);
+    -moz-transition: all 600ms cubic-bezier(0.68, -0.55, 0.265, 1.55);
     width: 80%;
 }
 
