--- a/app/blog/styles.css
+++ b/app/blog/styles.css
@@ -33,3 +33,7 @@ blockquote > p {
 pre {
     @apply p-4 rounded-md border-gray-300 bg-gray-50 dark:border-gray-500 dark:bg-gray-900;
 }
+
+p > img {
+    width: 300px;
+}
