--- a/styles/navigation.module.css
+++ b/styles/navigation.module.css
@@ -5,7 +5,7 @@
 }
 
 .navItem::after {
-  content: '';
+  content: "";
   display: block;
   height: 4px;
   background-color: transparent;
@@ -13,7 +13,7 @@
 }
 
 .navItem.active::after {
-  content: '';
+  content: "";
   display: block;
   height: 4px;
   background-color: var(--navItem-color, black);
