--- a/app/globals.css
+++ b/app/globals.css
@@ -12,16 +12,17 @@
   :root {
     --foreground-rgb: 255, 255, 255;
     --background-start-rgb: 22, 28, 45;
-    --background-end-rgb: 33, 43, 69;
+    --background-end-rgb: 22, 28, 45;
   }
 }
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
+  background: rgb(var(--background-end-rgb));
+  /* background: linear-gradient(
       to bottom,
       transparent,
       rgb(var(--background-end-rgb))
     )
-    rgb(var(--background-start-rgb));
+    rgb(var(--background-start-rgb)); */
 }
